Trabajando con las query

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "Data Source=db/Tienda.db;Initial Catalog=Northwind;IntegratedSecurity=true"
+    "DefaultConnection" : "Data Source=db/Tienda.db;"
   },
   "Logging": {
     "LogLevel": {
